# dataspeed_pds-release

./: .hg_archival.txt  .hgtags  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  dataspeed_pds.rosinstall  debian.store  nodelets.xml  noetic.ignored  package.xml  patches.conf  plugin.xml  releaser_history.json  rpm.store  tracks.yaml
bmr/1.0.5-1.0.6/: Temperature.bmr
dataspeed_pds/: CHANGELOG.rst  package.xml
dataspeed_pds_can/: CHANGELOG.rst  CMakeLists.txt  package.xml
dataspeed_pds_can/launch/: pds.launch
dataspeed_pds_can/src/: PdsNode.cpp
dataspeed_pds_lcm/: CHANGELOG.rst  CMakeLists.txt  lcm.cmake  package.xml
dataspeed_pds_lcm/src/: nodelet.cpp
dataspeed_pds_lcm/tests/: hz.cpp
dataspeed_pds_msgs/: CHANGELOG.rst  package.xml
dataspeed_pds_rqt/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
dataspeed_pds_rqt/src/dataspeed_pds_rqt/: pds_gui.py
dataspeed_pds_scripts/: CHANGELOG.rst  package.xml
dataspeed_pds_scripts/scripts/: request
debian/: changelog  control  gbp.conf  rules
include/dataspeed_pds_can/: dispatch.h
lcmtypes/: status_t.lcm
msg/: Temperature.msg
rpm/: ros-indigo-dataspeed-pds-msgs.spec  ros-indigo-dataspeed-pds-rqt.spec  ros-indigo-dataspeed-pds-scripts.spec  ros-indigo-dataspeed-pds.spec  ros-melodic-dataspeed-pds-can.spec  ros-melodic-dataspeed-pds-msgs.spec  ros-melodic-dataspeed-pds-rqt.spec  ros-melodic-dataspeed-pds.spec  ros-noetic-dataspeed-pds-can.spec  ros-noetic-dataspeed-pds-msgs.spec  ros-noetic-dataspeed-pds-rqt.spec  ros-noetic-dataspeed-pds.spec  template.spec
scripts/: set_mode  set_script
src/: PdsNode.cpp  PdsNode.h  node.cpp  nodelet.cpp
tests/: CMakeLists.txt  hz.cpp
